# tm

./: tm.cabal
src/TM/: Action.hs  Answer.hs  Configuration.hs  Machine.hs  Next.hs  PP.hs  Tape.hs  Util.hs
src/TM/Examples/: Copier.hs  CopyChecker.hs  UnaryAdder.hs  UnaryAdditionChecker.hs  UnarySubtracter.hs
