cabal-version:       >=2.0
name:                tm
version:             0.1.0.0
author:              Nicholas Coltharp
maintainer:          ncolthar@trinity.edu
build-type:          Simple

library
  exposed-modules:      TM.Tape
                      , TM.Machine
                      , TM.PP
                      , TM.Examples.CopyChecker
                      , TM.Examples.UnaryAdditionChecker
  build-depends:        base       ^>= 4.12
                      , containers ^>= 0.6.2.1
                      , lens       ^>= 4.18.1
  hs-source-dirs:       src
  default-extensions:   OverloadedLists
                      , PatternSynonyms
                      , ScopedTypeVariables
                      , TemplateHaskell
  default-language:     Haskell2010
